--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <title>MRB</title>
+  <title>Upsale</title>
   <meta name="theme-color" content="#c9e0e04d" />
   <meta
     name="apple-mobile-web-app-status-bar-style"
