--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
               <option value="">Отдел продаж</option>
               <option value="">Аудит</option>
             </select>
-            <button type="submit" class="button form-hero__button mx-auto mt-20">Отправить</button>
+            <button type="submit" class="button form-hero__button mx-auto mt-20 js-modal-call"
+                    data-modal-target="modal-thanks">Отправить
+            </button>
           </form>
         </div>
       </div>
@@ -397,7 +399,10 @@
           <option value="">Отдел продаж</option>
           <option value="">Аудит</option>
         </select>
-        <button type="submit" class="button button--link button-cooperation mx-auto">Отправить</button>
+        <button type="submit"
+                class="button button--link button-cooperation js-modal-call mx-auto"
+                data-modal-target="modal-thanks">Отправить
+        </button>
       </form>
 
     </div>
