--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="container">
     <div class="d-flex d-flex--align-center d-flex--space-between header-wrapper">
 
-      <p class="logo">UP<span>sale.</span></p>
+      <a href="#hero" class="logo js-anchor">UP<span>sale.</span></a>
 
       <nav class="header-nav">
         <a href="#services" class="header-nav__link js-anchor js-menu__link">Услуги</a>
@@ -79,12 +79,12 @@
   </div>
 </header>
 <main>
-  <section class="section section--hero">
+  <section id="hero" class="section section--hero">
     <div class="container">
       <div class="d-flex d-flex--space-between">
         <div class="hero__left-col">
-          <h1 class="ttl-1 mb-20 mb-md-30">Комплексный подход по увеличению продаж</h1>
-          <p class="text-hero d-none d-md-block mb-md-30">UPsale. - это не просто термин или техника которая активно
+          <h1 class="ttl-1 mb-20 mb-md-30">Комплексный подход<br> по увеличению продаж</h1>
+          <p class="text-hero d-none d-iphone-x-block d-md-block mb-md-30">UPsale. - это не просто термин или техника которая активно
             применяется в продажах.</p>
           <p class="text-hero">UPsale. - это новый уровень. Команда которая освободит вас от рутинной, возможно
             незнакомой, работы и при этом усилит ваши коммерческие показатели.</p>
@@ -98,8 +98,10 @@
 
             <select name="" class="form-hero__select">
               <option value="">Отдел продаж «под ключ»</option>
-              <option value="">Отдел продаж</option>
-              <option value="">Аудит</option>
+              <option value="">Отдел продаж на аутсорсе</option>
+              <option value="">Аудит отдела продаж</option>
+              <option value="">Найм и адаптация</option>
+              <option value="">Разработка системы продаж</option>
             </select>
             <button type="submit" class="button form-hero__button mx-auto mt-20 js-modal-call"
                     data-modal-target="modal-thanks">Отправить
@@ -396,8 +398,12 @@
 
         <select name="" class="">
           <option value="">Отдел продаж «под ключ»</option>
-          <option value="">Отдел продаж</option>
-          <option value="">Аудит</option>
+          <option value="">Отдел продаж на аутсорсе</option>
+          <option value="">Аудит отдела продаж</option>
+          <option value="">Найм и адаптация</option>
+          <option value="">Разработка
+            и внедрение
+            системы продаж</option>
         </select>
         <button type="submit"
                 class="button button--link button-cooperation js-modal-call mx-auto"
@@ -471,8 +477,10 @@
 
       <select name="" class="">
         <option value="">Отдел продаж «под ключ»</option>
-        <option value="">Отдел продаж</option>
-        <option value="">Аудит</option>
+        <option value="">Отдел продаж на аутсорсе</option>
+        <option value="">Аудит отдела продаж</option>
+        <option value="">Найм и адаптация</option>
+        <option value="">Разработка системы продаж</option>
       </select>
       <button type="submit"
               class="button button--link button-cooperation mx-auto js-modal-close js-modal-call"
@@ -491,11 +499,6 @@
   </div>
 
   <div class="modal-bg js-modal-bg js-modal-close"></div>
-
-
-  <!--<section class="section">
-    <div class="container"></div>
-  </section>-->
 
 </main>
 <footer id="contacts" class="footer">
