--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
       </div>
       <div class="button-modal-wrapper d-md-none">
-        <p class="button-modal__text">Подай заявку на консультацию бесплатно</p>
+        <p class="button-modal__text">Подать заявку на бесплатную консультацию</p>
         <button class="button-modal js-modal-call" data-modal-target="modal-form">Записаться</button>
       </div>
 
@@ -356,7 +356,7 @@
               <div class="slide-block">
                 <p class="slide__title">«За месяц привлекли 1288 клиентов»</p>
                 <p class="slide__text">Бабак Эйвази<br>
-                  Управляющий партнер проекта “Продолжение следует” с Владимиром Яковлевым, поделился результатами
+                  Управляющий партнер проекта «Продолжение следует» с Владимиром Яковлевым, поделился результатами
                   совместного запуска.</p>
               </div>
               <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/P7_X3G1njq0"
@@ -366,10 +366,9 @@
             </div>
             <div class="swiper-slide swiper-slide--recommendation">
               <div class="slide-block">
-                <p class="slide__title">«За месяц привлекли 1288 клиентов»</p>
+                <p class="slide__title">«Стабильно делаем конверсию выше 40%»</p>
                 <p class="slide__text">Евгения Бородина<br>
-                  Управляющий партнер проекта “Продолжение следует” с Владимиром Яковлевым, поделился результатами
-                  совместного запуска.</p>
+                  Founder в «PROджект онлайн-школ», рассказала о запуске своего курса.</p>
               </div>
               <iframe class="iframe" width="560" height="315" src="https://www.youtube.com/embed/xhEJZaQyV8c"
                       frameborder="0"
